--- a/index.html
+++ b/index.html
@@ -535,24 +535,24 @@
 	 			<div class="wrapper">
 	 				
 	 				<div class="footer-button">
-	 					<button>
-	 						<i class="fa fa-facebook" aria-hidden="true"></i>
-	 					</button>
-	 					<button>
-	 						<i class="fa fa-twitter" aria-hidden="true"></i>
-	 					</button>
-	 					<button>
-	 						<i class="fa fa-google-plus" aria-hidden="true"></i>
-	 					</button>
-	 					<button>
-	 						<i class="fa fa-behance" aria-hidden="true"></i>
-	 					</button>
-	 					<button>
-	 						<i class="fa fa-skype" aria-hidden="true"></i>
-	 					</button>
-	 					<button>
-	 						<i class="fa fa-apple" aria-hidden="true"></i>
-	 					</button>
+						<button>
+							<i class="fa fa-facebook" title="Facebook icon"></i>
+						</button>
+						<button>
+							<i class="fa fa-twitter" title="Twitter icon"></i>
+						</button>
+						<button>
+							<i class="fa fa-google-plus" title="Google icon"></i>
+						</button>
+						<button>
+							<i class="fa fa-behance" title="Behance icon"></i>
+						</button>
+						<button>
+							<i class="fa fa-skype" title="Skype icon"></i>
+						</button>
+						<button>
+							<i class="fa fa-apple" title="Apple icon"></i>
+						</button>
 
 	 				</div>
 
